--- a/frontend/login.html
+++ b/frontend/login.html
@@ -101,11 +101,11 @@
                     <div class="flex-grow border-t border-gray-300"></div>
                 </div>
                 <div class="grid grid-cols-2 gap-4">
-                    <button type="button" id="google-login" class="flex items-center justify-center py-3 px-4 border border-gray-300 rounded-md hover:bg-gray-50 transition-all">
+                    <button type="button" id="google-login" class="flex items-center justify-center py-3 px-4 border border-gray-300 rounded-md hover:bg-gray-50 transition-all opacity-50 cursor-not-allowed" disabled>
                         <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" class="w-6 h-6 mr-2">
                         Google
                     </button>
-                    <button type="button" id="facebook-login" class="flex items-center justify-center py-3 px-4 border border-gray-300 rounded-md hover:bg-gray-50 transition-all">
+                    <button type="button" id="facebook-login" class="flex items-center justify-center py-3 px-4 border border-gray-300 rounded-md hover:bg-gray-50 transition-all opacity-50 cursor-not-allowed" disabled>
                         <i class="fab fa-facebook-f text-blue-600 text-lg mr-2"></i>
                         Facebook
                     </button>
@@ -202,10 +202,6 @@
         </div>
     </footer> -->
 
-    <!-- Firebase App JS -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
-    
     <!-- Main and Auth JS -->
     <script src="main.js"></script>
     <script src="auth.js"></script>
